Transform compose file to version 2 Add beanstalk and supervisord support for book conversion (experimental) Create workers/Tasks architecture Refactor
