# swagger.json
@@ -897,6 +897,48 @@
                 }
             }
         },
+        "/book/{id}/convert": {
+            "post": {
+                "summary": "Convert book to requested format: MOBI, TXT, PDF, EPUB",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of book to fetch",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Requested format",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "to": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Conversion task accepted by the server"
+                    },
+                    "400": {
+                        "description": "Unexpected error occurred"
+                    },
+                    "404": {
+                        "description": "Book not found"
+                    }
+                }
+            }
+        },
         "/genre": {
             "get": {
                 "summary": "Retrieve all genres",
@@ -1226,12 +1268,6 @@
                 "id": {
                     "type": "integer"
                 },
-                "ext": {
-                    "type": "string"
-                },
-                "filePath": {
-                    "type": "string"
-                },
                 "title": {
                     "type": "string"
                 },
@@ -1247,14 +1283,17 @@
                 "genre": {
                     "type": "string"
                 },
-                "mime": {
-                    "type": "string"
-                },
                 "user": {
                     "$ref": "#/definitions/User"
                 },
                 "description": {
                     "type": "string"
+                },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/File"
+                    }
                 }
             },
             "type": "object"
@@ -1292,6 +1331,20 @@
                 },
                 "modificationDate": {
                     "type": "datetime"
+                }
+            },
+            "type": "object"
+        },
+        "File": {
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "ext": {
+                    "type": "string"
+                },
+                "mime": {
+                    "type": "string"
                 }
             },
             "type": "object"
